<resources>
    <string name="app_name">upi test demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Payment Methods</string>
    <string name="second_fragment_label">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="pay">Pay</string>
    <string name="new_payment">New Access Token</string>
    <string name="new_braintree">New Braintree Token</string>
    <string name="inquire">Inquire</string>
    <string name="three_ds">3DSecure Verification</string>
    <string name="consumer_id">consumer ID</string>
    <string name="access_token">Access Token </string>
    <string name="result_title">Result </string>
    <string name="reference">Reference ID </string>
    <string name="inquire_ref">Inquire By Reference</string>
    <string name="transaction">Transaction ID </string>
    <string name="paypal">Paypal</string>
    <string name="credit_card">Credit Card</string>
    <string name="venmo">Venmo</string>
    <string name="alipay">AliPay</string>
    <string name="wechat">WechatPay</string>
    <string name="upop">UnionPay</string>
    <string name="amount">AMOUNT</string>
    <string name="timeout">Timeout</string>
    <string name="auth_key">Auth key</string>
    <string name="callback_url">callback URL</string>
    <string name="default_callback_url">https://dev.citcon-inc.com"</string>

    <string name="hello_first_fragment">Check out</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>