<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="upidemo.view.PaymentFragment">

    <data>
        <variable
            name="viewModel"
            type="upidemo.view.DemoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_consumer_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/consumer_id" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_3DS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/three_ds" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_new_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/new_payment" />

                <Button
                    android:id="@+id/button_new_braintree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/new_braintree" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/amount_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:text="@string/amount"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/amount_editText"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/rect"
                    android:inputType="numberDecimal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@={viewModel.mAmount}"
                    android:textSize="14sp"
                    tools:ignore="LabelFor" />

                <Spinner
                    android:id="@+id/select_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rect"
                    android:entries="@array/currency_list"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:selectedItemPosition="@={ viewModel.mCurrencyIndex }" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_callback_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/callback_url"
                    android:text="@={viewModel.mCallback}"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_access_token_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/access_token" />

                <TextView
                    android:id="@+id/tv_access_token"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_reference_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reference" />

                <TextView
                    android:id="@+id/tv_reference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar_loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <RadioGroup
            android:id="@+id/radiogroup_payment_braintree"
            android:onCheckedChanged="@{viewModel.onPaymentTypeChanged}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:checkedButton="@id/radioButton_paypal"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radioButton_paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paypal" />

            <RadioButton
                android:id="@+id/radioButton_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_card" />

            <RadioButton
                android:id="@+id/radioButton_venmo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/venmo" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radiogroup_payment_cn"
            android:onCheckedChanged="@{viewModel.onPaymentTypeChanged}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:checkedButton="@id/radioButton_paypal"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radioButton_alipay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alipay" />

            <RadioButton
                android:id="@+id/radioButton_wechat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wechat" />

            <RadioButton
                android:id="@+id/radioButton_upop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upop" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>